# api-mynest

./: .env.example  .gitignore  README.md  alembic.ini  main.py  pyproject.toml
bd/: env.py
bd/versions/: d43cf60e7e2a_added_password_model.py  eb72b9e434d6_added_user_model.py
controller/: auth_controller.py
docs/: database.md
dto/: auth_dto.py
model/: __init__.py  password.py  user.py
repository/: user_repository.py
routes/: __init__.py  auth.py  health.py
service/: auth_service.py
